tried homework but failed

--- a/3b Homework.ipynb
+++ b/3b Homework.ipynb
@@ -39,19 +39,7 @@
    "execution_count": 1,
    "id": "1dee3279-50ba-4511-b303-5c57d7b32b0a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np"
    ]
@@ -69,11 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "84b1cd47-fa21-42ea-9b35-3b65154ac097",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vec1 = np.array([2,4,6,8,10])\n",
+    "vec2 = np.array([1,2,3,4,5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,11 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bb81964f-c3d1-4977-bba2-28aa5c3da4e2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vec3 = vec1 - vec2\n",
+    "print(vec3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,11 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "22b71893-ca95-4e73-9772-a7a3b95177c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5 10 15 20 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vec4 = vec3 * 5\n",
+    "print(vec4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,11 +130,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f6558b02-482f-4624-bf4b-fe1e128015e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 5 10 15 20 25]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix25 = np.vstack((vec3, vec4))\n",
+    "print(matrix25)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,27 +162,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5931c767-88aa-4b85-9f5a-22fdacc08a26",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5 10 15 20 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix25[1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "aba16fbc-ffad-419c-9302-97812396f267",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix25[:, 2])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "85f49830-f0b2-4f9e-8e46-4c2a2af31da0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix25[1, -1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,11 +224,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "791bea30-17b6-491d-b5ec-353b1367d502",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[14 55 31 19 45]\n",
+      " [51 43 30 32 44]\n",
+      " [61 43 96 98 11]\n",
+      " [89 26 20 94 68]\n",
+      " [78 87 65  0 90]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix55 = np.random.randint(0,100, (5,5))\n",
+    "print(matrix55)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,27 +261,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6c906a0e-016f-467c-b027-689adfcc5fe2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.average(matrix55))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "524efd4d-fe59-425b-9698-543f86830489",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[293 254 242 243 258]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(matrix55))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "9906282b-cfdc-474a-82ac-2027aa8f0cca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[89 87 96 98 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix55.max(axis=0))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,11 +323,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "c4eb3b06-8ddd-4b3c-9949-2497da05138b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[55 51 61 96 98 89 94 68 78 87 65 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mm = matrix55[matrix55 > 50]\n",
+    "print(mm)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,19 +350,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "225c1743-7f74-448f-9bef-5a90a316222a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mm.shape)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "f87262ff-0ea7-4849-872d-0debe35e7676",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[55 51 61]\n",
+      " [96 98 89]\n",
+      " [94 68 78]\n",
+      " [87 65 90]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mmr = np.reshape(mm, (4, 3))\n",
+    "print(mmr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,11 +398,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "a9a4e93b-adb4-4658-85e0-4a012946ff88",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[96 98 94 68 78 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mmr[mmr % 2 == 0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,18 +448,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "733cf50a-fc20-4cda-97e0-bc6be0c94be1",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1c44a90-d9af-4928-b485-55f57c409d8a",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True  True  True  True  True]\n",
+      " [ True False  True False  True]\n",
+      " [ True  True  True  True  True]\n",
+      " [ True False  True False  True]\n",
+      " [ True  True  True  True  True]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[153], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m \t\u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      9\u001b[0m \t\t\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 11\u001b[0m arr \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfromfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mevaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(arr)\n",
+      "File \u001b[0;32m~/Boolean/numpy/.venv/lib/python3.12/site-packages/numpy/core/numeric.py:1845\u001b[0m, in \u001b[0;36mfromfunction\u001b[0;34m(function, shape, dtype, like, **kwargs)\u001b[0m\n\u001b[1;32m   1841\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _fromfunction_with_like(\n\u001b[1;32m   1842\u001b[0m             like, function, shape, dtype\u001b[38;5;241m=\u001b[39mdtype, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   1844\u001b[0m args \u001b[38;5;241m=\u001b[39m indices(shape, dtype\u001b[38;5;241m=\u001b[39mdtype)\n\u001b[0;32m-> 1845\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[153], line 11\u001b[0m, in \u001b[0;36m<lambda>\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      8\u001b[0m \t\u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      9\u001b[0m \t\t\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 11\u001b[0m arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfromfunction(\u001b[38;5;28;01mlambda\u001b[39;00m x, y: \u001b[43mevaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m, (\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m5\u001b[39m), dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(arr)\n",
+      "Cell \u001b[0;32mIn[153], line 6\u001b[0m, in \u001b[0;36mevaluate\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      4\u001b[0m test \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlogical_or(x \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m, y \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(test)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (x \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m y \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m      7\u001b[0m \t\u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
    "source": [
-    " "
+    "def evaluate(x, y):\n",
+    "\t# print(x % 2 == 0)\n",
+    "\t# print(y % 2 == 0)\n",
+    "\ttest = np.logical_or(x % 2 == 0, y % 2 == 0)\n",
+    "\tprint(test)\n",
+    "\tif (x % 2 == 0 or y % 2 == 0):\n",
+    "\t\treturn 1\n",
+    "\telse:\n",
+    "\t\treturn 0\n",
+    "\n",
+    "arr = np.fromfunction(lambda x, y: evaluate(x,y), (5,5), dtype=int)\n",
+    "\n",
+    "print(arr)"
    ]
   },
   {
